--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recoil": "^0.5.2",
     "typescript": "^4.3.5"
   },
   "scripts": {
