--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@types/node": "^16.7.1",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "next": "^11.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "recoil": "^0.5.2",
     "typescript": "^4.3.5"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -37,7 +38,10 @@
     ]
   },
   "devDependencies": {
-    "raw-loader": "^4.0.2",
-    "react-app-rewired": "^2.1.8"
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^13.0.0",
+    "jest": "^26.6.3",
+    "jest-raw-loader": "^1.0.1",
+    "raw-loader": "^4.0.2"
   }
 }
