--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@types/node": "^16.7.1",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
+    "@types/node": "^16.11.36",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "next": "^12.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
