--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
-    "@types/node": "^16.11.36",
-    "@types/react": "^17.0.45",
-    "@types/react-dom": "^17.0.17",
     "next": "^12.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "recoil": "^0.5.2",
+    "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.3.5"
   },
   "scripts": {
@@ -43,7 +40,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.0.0",
-    "jest": "^26.6.3",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "jest-raw-loader": "^1.0.1",
     "raw-loader": "^4.0.2"
   }
