--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "eslint": "^8.16.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-raw-loader": "^1.0.1",
