--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
     "start": "next start",
     "export": "next export",
     "test": "jest --watch",
-    "postinstall": "patch-package"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+    "postinstall": "patch-package",
+    "lint": "next lint"
   },
   "browserslist": {
     "production": [
@@ -42,12 +38,15 @@
     ]
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.0.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.16.0",
+    "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-raw-loader": "^1.0.1",
