--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"]
+  "plugins": ["jest"],
+  "extends": ["next/core-web-vitals", "prettier"],
+  "env": {
+    "jest/globals": true
+  }
 }
