--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,12 +18,31 @@
         "type": "node-terminal",
         "request": "launch",
         "command": "npm run dev",
-        "console": "integratedTerminal",
         "serverReadyAction": {
           "pattern": "started server on .+, url: (https?://.+)",
           "uriFormat": "%s",
           "action": "debugWithChrome"
         }
+      },
+      {
+        "type": "node",
+        "name": "vscode-jest-tests.v2",
+        "request": "launch",
+        "console": "integratedTerminal",
+        "internalConsoleOptions": "neverOpen",
+        "cwd": "${workspaceFolder}",
+        "runtimeExecutable": "npm",
+        "args": [
+          "run",
+          "test",
+          "--",
+          "--runInBand",
+          "--watchAll=false",
+          "--testNamePattern",
+          "${jest.testNamePattern}",
+          "--runTestsByPath",
+          "${jest.testFile}"
+        ]
       }
     ]
   }
