--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/dagre": "^0.7.47",
     "@zip.js/zip.js": "^2.4.20",
     "dagre": "^0.8.5",
-    "next": "^12.1.4",
+    "next": "^12.1.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "recoil": "^0.7.3-alpha.2",
@@ -21,7 +21,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "test": "jest --watch",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "postinstall": "patch-package",
     "lint": "next lint"
   },
@@ -41,16 +41,19 @@
     "@next/bundle-analyzer": "^12.1.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.0.0",
+    "@types/jest": "^28.1.3",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-raw-loader": "^1.0.1",
     "patch-package": "^6.4.7",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "ts-jest": "^28.0.5"
   }
 }
