--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/dagre": "^0.7.47",
     "@zip.js/zip.js": "^2.4.20",
     "dagre": "^0.8.5",
+    "localforage": "^1.10.0",
     "next": "^12.1.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
